# des_lab

./: .gitignore  des_chiper.py  gamma.py  gen_prime.py  mdes_chiper.py  pyproject.toml  rsa_chiper.py
